src/objects/OrderApi__Badge_Workflow__c.object
<CustomObject>
    <description>Trigger the assignment and unassignment of Badges to Contacts using Badge Workflow</description>
    <fields>
        <fullName>OrderApi__Assigned_Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated/Override ** Checked when the Type field set to &quot;Assigned Contacts&quot;.</description>
        <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Assigned Contacts&quot;.</inlineHelpText>
        <label>Assigned Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Expire__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Badge will automatically unassign itself from the Contact record when the Assignment record becomes in active. &quot;Is Active&quot; is unchecked. Defaults unchecked.</description>
        <inlineHelpText>When checked, the Badge will automatically unassign itself from the Contact record when the Assignment record becomes in active. &quot;Is Active&quot; is unchecked. Defaults unchecked.</inlineHelpText>
        <label>Auto Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Badge_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** Required ** Link to the related Badge Type</description>
        <inlineHelpText>** Required ** Link to the related Badge Type</inlineHelpText>
        <label>Badge Type</label>
        <referenceTo>OrderApi__Badge_Type__c</referenceTo>
        <relationshipLabel>Workflow</relationshipLabel>
        <relationshipName>Badge_Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related Item</description>
        <inlineHelpText>Link to the related Item</inlineHelpText>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Badge Workflows</relationshipLabel>
        <relationshipName>Badge_Workflows</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated/Override ** Checked when the Type field set to &quot;Line Account&quot;.</description>
        <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Line Account&quot;.</inlineHelpText>
        <label>Line Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Line_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated/Override ** Checked when the Type field set to &quot;Line Contact&quot;.</description>
        <inlineHelpText>** System Calculated/Override ** Checked when the Type field set to &quot;Line Contact&quot;.</inlineHelpText>
        <label>Line Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>** Required ** Select &quot;Line Contact&quot; to assign the Badge to the purchasing Customer as defined in the &quot;Contact&quot; lookup field on the Sales Order Line. Select &quot;Assigned Contacts&quot; to give the Badge to all &quot;Active&quot; assigned Contacts.</description>
        <inlineHelpText>** Required ** Select &quot;Line Contact&quot; to assign the Badge to the purchasing Customer as defined in the &quot;Contact&quot; lookup field on the Sales Order Line. Select &quot;Assigned Contacts&quot; to give the Badge to all &quot;Active&quot; assigned Contacts.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Line Contact</fullName>
                    <default>true</default>
                    <label>Line Contact</label>
                </value>
                <value>
                    <fullName>Assigned Contacts</fullName>
                </value>
                <value>
                    <fullName>Line Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Badge Workflow</label>
    <nameField>
        <label>Badge Workflow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Badge Workflows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>